# cli_server_connect

./: .gitignore  main.py  pyproject.toml
app/: database.py  main.py  manager.py  schemas.py  service.py  view.py
