[project]
name = "server-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
server-connect = "app.main:main"            